<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="250dip"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  >
  <TextView android:text="@string/set_parametre"
		android:layout_width="fill_parent" android:layout_height="wrap_content" 
  />
  
 	<Button android:id="@+id/set_position" android:text="@string/set_position"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />

	<Button android:id="@+id/set_notification" android:text="@string/set_notification"
		android:layout_width="fill_parent" android:layout_height="wrap_content" 
		/>
	<Button android:id="@+id/set_calcul" android:text="@string/set_calcul"
		android:layout_width="fill_parent" android:layout_height="wrap_content" 
		/>
	<Button android:id="@+id/set_reciter" android:text="@string/set_reciter"
		android:layout_width="fill_parent" android:layout_height="wrap_content" 
		/>
	<Button android:id="@+id/set_theme" android:text="@string/set_theme"
		android:layout_width="fill_parent" android:layout_height="wrap_content" 
				android:enabled="false"
		/>
</LinearLayout>
